src/main/resources/kustomize/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-webapp
  labels:
    #app: postgres
    app: springboot-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-webapp
  template:
    metadata:
      labels:
        app: springboot-webapp
        env: dev
    spec:
      containers:
      - name: springboot-webapp-rnd
        image: cmskjav/springboot-rnd:v1
        #image: spring-kube-demo:latest
        #imagePullPolicy: Never
        ports:
        - containerPort: 8060
        readinessProbe:
            httpGet:
              path: /
              port: 8060
            initialDelaySeconds: 5
            periodSeconds: 3
        livenessProbe:
            httpGet:
              path: /
              port: 8060
            initialDelaySeconds: 5
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-webapp-service
spec:
  type: NodePort
  selector:
    app: springboot-webapp
  ports:
    - protocol: TCP
      # port shouldn't need to be same. But Target port should be same with respective pods port Ex: Template's port
      port: 8060
      targetPort: 8060
      # nodePort: 30100
