src/main/resources/kustomize/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  #namespace: kube-sys
spec:
  ingressClassName: nginx
  rules:
    - host: www.local.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-webapp-service
                port:
                  number: 8060
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: springboot-webapp2-service
                port:
                  number: 8070
